@@ -284,10 +284,10 @@ int ioutfile_set(ENVIRON *csound, IOUTFILE *p)
       }
       break;
       case 2: /* with prefix (start at 0 time) */
-        if (p->kreset == 0) p->kreset = kcounter;
+        if (csound->fout_kreset == 0) csound->fout_kreset = kcounter;
         {
           int p1 = (int) p->h.insdshead->insno;
-          double p2= (double) (kcounter - p->kreset) * onedkr;
+          double p2= (double) (kcounter - csound->fout_kreset) * onedkr;
           double p3 = p->h.insdshead->p3;
           if (p3 > FL(0.0))
             fprintf(rfil, "i %i %f %f ", p1, p2, p3);
@@ -296,7 +296,7 @@ int ioutfile_set(ENVIRON *csound, IOUTFILE *p)
         }
         break;
       case 3: /* reset */
-        p->kreset=0;
+        csound->fout_kreset = 0;
         return OK;
       }
       for (j=0; j < p->INOCOUNT - 3;j++) {
@@ -321,7 +321,8 @@ int ioutfile_set_r(ENVIRON *csound, IOUTFILE_R *p)
     p->counter =  kcounter;
     p->done = 1;
     if (*p->iflag==2)
-      if (p->kreset == 0) p->kreset = kcounter;
+      if (csound->fout_kreset == 0)
+        csound->fout_kreset = kcounter;
     return OK;
 }
 
@@ -351,13 +352,13 @@ int ioutfile_r(ENVIRON *csound, IOUTFILE_R *p)
           case 2: /* with prefix (start at 0 time) */
             {
               int p1 = (int) p->h.insdshead->insno;
-              double p2 = (p->counter - p->kreset) *onedkr;
+              double p2 = (p->counter - csound->fout_kreset) *onedkr;
               double p3 = (double) (kcounter-p->counter) * onedkr;
               fprintf(rfil, "i %i %f %f ", p1, p2, p3);
             }
             break;
           case 3: /* reset */
-            p->kreset=0;
+            csound->fout_kreset = 0;
             return OK;
           }
           for (j=0; j < p->INOCOUNT - 3;j++) {
